--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,28 +1,17 @@
-#log4j.rootLogger=DEBUG, stdout
-#log4j.logger.org.mybatis=DEBUG
-#log4j.appender.stdout.Encoding=GBK
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-##log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n
-#log4j.appender.stdout.layout.ConversionPattern=%d %m%n
-
-
-log4j.rootLogger=DEBUG, Console
-
+log4j.rootLogger=DEBUG,Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Target=System.out
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-#log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
-log4j.appender.Console.layout.ConversionPattern=%d %m%n
-log4j.appender.Console.Target=System.out
-
-#log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-#log4j.appender.logfile.File=log/test.log
-#log4j.appender.logfile.MaxFileSize=128MB
-#log4j.appender.logfile.MaxBackupIndex=3
-#log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
-#log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c.%M(%L) - %m%n
-
-log4j.logger.java.sql.ResultSet=INFO
-log4j.logger.org.apache=INFO
-log4j.logger.java.sql.Connection=DEBUG
-log4j.logger.java.sql.Statement=DEBUG
+log4j.appender.Console.layout.ConversionPattern=%d [%p] - %m%n
+log4j.logger.org.apache=ERROR
+log4j.logger.org.mybatis=ERROR
+log4j.logger.org.springframework=ERROR
+log4j.logger.log4jdbc.debug=ERROR
+log4j.logger.com.gk.mapper=ERROR
+log4j.logger.jdbc.audit=ERROR
+log4j.logger.jdbc.resultset=ERROR
+log4j.logger.jdbc.sqlonly=DEBUG
+log4j.logger.jdbc.sqltiming=ERROR
+log4j.logger.jdbc.connection=FATAL
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
