导出word测试, 真没啥问题 公司加密软件太扯淡了 另外, 可以直接用html导出word哦

--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,12 @@
             <artifactId>org.apache.poi.xwpf.converter.core</artifactId>
             <version>1.0.6</version>
         </dependency>
+        <!-- freemarker依赖包 -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.23</version>
+        </dependency>
     </dependencies>
 
     <build>
