新建spring声明式事务测试表(前一次提交操作失误)

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -32,7 +32,7 @@ sqlMapTargetPackage=com.hanqi.dao.mapper
 javaClientTargetPackage=com.hanqi.dao
 
 #需要生成的表名
-tab.name=%
+tab.name=dept
 
 #表所在用户(oracle数据库中, 如果多个用户<拥有dba角色的用户>下有重名的表, 可以通过这个属性过滤, 避免出现重复)
 tab.schema=mydb
