--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -4,7 +4,7 @@
 #dataSource.driverClassName=oracle.jdbc.OracleDriver
 
 dataSource.driverClassName=com.mysql.jdbc.Driver
-dataSource.url=jdbc:mysql://localhost:3306/mydb?useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
+dataSource.url=jdbc:mysql://127.0.0.1:3306/mydb?useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
 dataSource.username=root
 dataSource.password=123456
 # 连接池的配置信息
