--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -58,7 +58,7 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
-    <error-page>
+<!--    <error-page>
         <error-code>404</error-code>
         <location>/error404</location>
     </error-page>
@@ -69,6 +69,6 @@
     <error-page>
         <exception-type>java.lang.Throwable</exception-type>
         <location>/error500</location>
-    </error-page>
+    </error-page>-->
 
 </web-app>
