--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,14 @@
             <artifactId>quartz-jobs</artifactId>
             <version>2.2.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.jacob/jacob -->
+<!--        <dependency>
+            <groupId>com.jacob</groupId>
+            <artifactId>jacob</artifactId>
+            <version>1.19</version>
+        </dependency>-->
+
         <!-- webmagic -->
         <dependency>
             <groupId>us.codecraft</groupId>
